# rust-ml-benchmark

./: .gitignore  Cargo.toml  README.md  a.out
.github/workflows/: rust-ci.yml
Ansible/: Benchmark.yaml  ansible.cfg
Ansible/inventory/: hosts.ini
Benchmark-Setup/: README.md
Benchmark-Setup/scripts/: benchmark  benchmark.c  tmp_output.txt
Benchmark-Setup/scripts/bench/: greenbox.csv  inference.csv  loadmodel.csv  postprocessing.csv  readimg.csv  readimg_greenbox.csv  redbox.csv  total.csv
Benchmark-Setup/src/: main.rs
Results/raspberrypi4/bench/: greenbox.csv  inference.csv  loadmodel.csv  postprocessing.csv  readimg.csv  readimg_greenbox.csv  redbox.csv  total.csv
Results/raspberrypi4multithreads/bench/: greenbox.csv  inference.csv  loadmodel.csv  postprocessing.csv  readimg.csv  readimg_greenbox.csv  redbox.csv  total.csv
scripts/: benchmark  benchmark.c  tmp_output.txt
scripts/bench/: greenbox.csv  inference.csv  loadmodel.csv  postprocessing.csv  readimg.csv  readimg_greenbox.csv  redbox.csv  total.csv
scripts/benchmark.dSYM/Contents/Resources/DWARF/: benchmark
scripts/benchmark.dSYM/Contents/Resources/Relocations/aarch64/: benchmark.yml
src/: main.rs
src/src/: main.rs
