[package]
name = "rust-ml-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
ndarray = "0.16.1"
ort = "2.0.0-rc.10"
libc = "0.2"
thiserror = "1.0"
num_threads = "0.1.7"

[profile.release-lto]
inherits = "release"
lto = true
strip = "debuginfo"

[profile.release-lto.build-override]
opt-level = 3
codegen-units = 256
debug = false
debug-assertions = false
